test/types/tuple/marybeth/tuplecast.good
tuplecast.chpl:5: error: illegal cast to non-type
