test/types/tuple/marybeth/tuplecast.chpl
var x: real;
var y: 10*real;

x = 3.14;
y = x: 10*real;

writeln(y);
